tests/files/parser_tests/should_fail/035.cmdr
//Should not parse due to unterminated call parentheses
add1, 2);
